syntax = "proto3";

option go_package = "gen/board";

import "google/protobuf/timestamp.proto";

service Board {
  rpc GetBoard (BoardRequest) returns (BoardResponse) {}
}

message BoardRequest {
  int64 id = 1;
}

message BoardResponse {
  int64 id = 1;
  string title = 2;
  string content = 3;
  google.protobuf.Timestamp createdAt = 4;
}
